--- a/src/test/resources/testdataPropertyfiles/applicationData.properties
+++ b/src/test/resources/testdataPropertyfiles/applicationData.properties
@@ -1,5 +1,5 @@
 url=https://login.salesforce.com/
-login.valid.userid= pratibha@cts.com
-login.valid.password=Universe33
+login.valid.userid= masked in public repository
+login.valid.password=masked in public repository
 login.invalid.userid=admin1@gmail.com
 login.invalid.password=12345
